<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <!--sportrecord-->
    <string name="signup_button">注册</string>
    <string name="signin_button">登录</string>
    <!--signup-->
    <string name="zhuche">注册</string>
    <string name="yonghuming">用户名：</string>
    <string name="mima">密码：</string>
    <string name="wancheng">完成</string>
    <string name="querenmima">确认密码：</string>
    <!-- signin -->
    <string name="denglu">登录</string>
    <string name="quxiao">取消</string>
    <string name="jizhumima">记住密码</string>
    <!-- main -->
    <string name="start">开始运动</string>
    <!-- running.tab_state -->
    <string name="distance">距离</string>
    <string name="time">时间</string>
    <string name="speed">速度</string>
    <string name="step">步数</string>
    <string name="stop">停止运动</string>
    <string name="yinghao">:</string>
    <string name="kilometer">m</string>
    <string name="kilometerpers">m/s</string>
    <string name="init_time_100millisecond">00:00:0</string>
    <string name="init_time_second">00:00</string>
    <!-- final -->
    <string name="share">分享</string>
    <string name="sportagain">再运动一次</string>
    <string name="a">你一共跑了</string>
    <string name="b">,平均速度为：</string>
    <string name="c">，时间为</string>



    <string name="app_name">MotionRecorder</string>
    <string name="menu_settings">设置</string>
    <string name="step_number">步\t数</string>
    <string name="use_time">用\t时</string>
    <string name="distance1">行 程</string>
    <string name="calories">热 量</string>
    <string name="velocity">速 度</string>
    <string name="zero">0</string>
    <string name="double_zero">0.0</string>
    <string name="calories_zero">0.0</string>
    <string name="velocity_zero">0.0</string>
    <string name="km">m</string>
    <string name="calorie">kcal</string>
    <string name="kilometer_per_hour">m/s</string>
    <string name="start1">开始</string>
    <string name="pause">暂停</string>
    <string name="cancel">消零</string>
    <string name="daily">今日累积</string>
    <string name="image_star">image_star</string>
    <string name="sunday">星期天</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="month">月\t</string>
    <string name="day">日</string>
    <string name="todo">TODO</string>
    <string name="information">说明</string>
    <string name="settings_title">设置</string>
    <string name="sensitivity">灵敏度：</string>
    <string name="low">低</string>
    <string name="high">高</string>
    <string name="sensitivity_info">灵敏度越高,对身体的动作越敏感.请调节灵敏度来适应不同的体形,路面等因素.</string>
    <string name="step_length">步长</string>
    <string name="cm">厘米</string>
    <string name="setp_length_info_1">为估算行走的距离和速度，请输入步长</string>
    <string name="setp_length_info_2">(得出的速度和距离较为粗略，仅供参考)</string>
    <string name="weigth">体重</string>
    <string name="kg">公斤</string>
    <string name="weight_info">为计算消耗的热量(卡路里)，请入体重。</string>
    <string name="save">保存</string>

</resources>
